// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic renders 1`] = `
<div>
  <div>
    <div
      class="w-full h-full flex flex-col items-center B-editor-container_editor-container B-editor-container_editor-container-1 overflow-y-scroll  "
    >
      <div
        class="w-full "
        style="max-width: min(var(--BV-page-max-width), 100vw);"
      >
        <div
          data-testid="mock-editor"
        >
          MOCK_EDITOR
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when file does not exist 1`] = `
<div>
  <div>
    <div
      class="w-full h-full flex flex-col items-center B-editor-container_editor-container B-editor-container_editor-container-1 overflow-y-scroll  "
    >
      <div
        class="w-full "
        style="max-width: min(var(--BV-page-max-width), 100vw);"
      >
        <div
          class="flex flex-col justify-center h-full px-3 align-middle"
        >
          <h3
            class="mb-8 text-xl font-bold leading-none sm:text-3xl lg:text-3xl"
          >
            🕵️‍♀️‍ Note "
            blah.md
            " was not found
          </h3>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders when no wsPath is provided 1`] = `
<div>
  <div>
    <div
      class="w-full h-full flex flex-col items-center B-editor-container_editor-container B-editor-container_editor-container-1 overflow-y-scroll  "
    >
      <div
        class="w-full "
        style="max-width: min(var(--BV-page-max-width), 100vw);"
      >
        <div>
          Nothing was found here
        </div>
      </div>
    </div>
  </div>
</div>
`;
